# dogface_landmark_estimation_hrcnn

./: .gitignore  README.md  analyze_training_logs.py  config.py  crop_facial_regions.py  crop_multiple_dogs.py  dataset.py  debug_coordinates.py  debug_model_output.py  demo_crop_regions.py  example_output.json  extract_landmarks_json.py  inference_on_images.py  inference_with_regions.py  interactive_landmark_mapper.py  landmark_mapping_template.py  main.py  pyproject.toml  quick_test_regions.py  requirements.txt  run_evaluation.sh  run_extract_json.sh  run_inference_regions.sh  run_region_test.sh  setup_mmpose_sagemaker.sh  summarize_regions.py  test_model_quick.py  test_region_groupings.py  train_simple.py  visualize_landmark_patterns.py  visualize_landmarks_only.py
checkpoints/: td-hm_hrnet-w32_udp-8xb64-210e_coco-256x192.py
configs/dogflw/: td-hm_hrnet-w32_udp_dogflw-256x256.py
data/dogflw/annotations/: train.json  val.json
dog_face_inference/: INTEGRATION_GUIDE.md  README.md  __init__.py  dog_face_predictor.py  example.py  landmark_regions.py  requirements.txt  setup.sh
dog_face_inference/configs/: dog_face_config.py
dog_face_inference/models/: README.md
tools/: convert_dogflw_to_coco.py  test.py  train.py
